--- a/安全技能.md
+++ b/安全技能.md
@@ -1,4 +1,21 @@
-Domain 1.0 Threats威脅, Attacks攻擊 and Vulnerabilities漏洞
+#
+```
+CompTIA Security+ Review Guide, 4th Edition
+Exam SY0-501
+Author: James M. Stewart
+
+
+Chapter 1 Threats, Attacks, and Vulnerabilities 1
+Chapter 2 Technologies and Tools 103
+Chapter 3 Architecture and Design 237
+Chapter 4 Identity and Access Management 347
+Chapter 5 Risk Management 399
+Chapter 6 Cryptography and PKI 481
+Appendix Answers to Review Questions 559
+```
+
+# Domain 1.0 Threats威脅, Attacks攻擊 and Vulnerabilities漏洞
+```
 1.1 Given a scenario, analyze indicators of compromise and determine the
 type of malware.
  ■ Viruses
@@ -153,7 +170,9 @@ type of malware.
 ■ Architecture/design weaknesses
 ■ New threats/zero day
 ■ Improper certificate and key management
-Domain 2.0 Technologies and Tools 你擁有底下技術與工具運用技能嗎??!!
+```
+# Domain 2.0 Technologies and Tools 你擁有底下技術與工具運用技能嗎??!!
+```
 2.1 Install and configure network components, both hardware- and softwarebased, to support organizational security.
 ■ Firewall
 ■ ACL
@@ -368,7 +387,9 @@ Domain 2.0 Technologies and Tools 你擁有底下技術與工具運用技能嗎?
 ■ Routing and switching
 ■ Network address allocation
 ■ Subscription services
-Domain 3.0 Architecture and Design 安全架構與設計
+```
+# Domain 3.0 Architecture and Design 安全架構與設計
+``` 
 3.1 Explain use cases and purpose for frameworks, best practices and secure
 configuration guides.
 ■ Industry-standard frameworks and reference architectures
@@ -574,7 +595,9 @@ configuration guides.
 ■ Logs
 ■ Infrared detection
 ■ Key management
-Domain 4.0 Identity and Access Management身分驗證與存取管理
+```
+# Domain 4.0 Identity and Access Management身分驗證與存取管理
+```
 4.1 Compare and contrast identity and access management concepts.
 ■ Identification, authentication, authorization and accounting (AAA)
 ■ Multifactor authentication
@@ -658,7 +681,9 @@ Introduction xlix
 ■ Password history
 ■ Password reuse
 ■ Password length
-Domain 5.0 Risk Management 風險管理
+```
+# Domain 5.0 Risk Management 風險管理
+```
 5.1 Explain the importance of policies, plans and procedures related to
 organizational security.
 ■ Standard operating procedure
@@ -816,7 +841,9 @@ Introduction lv
 ■ Privacy officer
 ■ Data retention
 ■ Legal and compliance
-Domain 6.0 Cryptography and PKI
+```
+# Domain 6.0 Cryptography and PKI
+```
 6.1 Compare and contrast basic concepts of cryptography.
 ■ Symmetric algorithms
 ■ Modes of operation
@@ -921,3 +948,4 @@ Introduction lix
 ■ Certificate chaining ■ Types of certificates ■ Wildcard ■ SAN ■ Code signing
 ■ Self-signed ■ Machine/computer ■ Email ■ User ■ Root ■ Domain validation ■ Extended validation 
 ■ Certificate formats ■ DER ■ PEM ■ PFX ■ CER ■ P12 ■ P7B
+```
