--- a/安全技能.md
+++ b/安全技能.md
@@ -27,24 +27,71 @@ type of malware.
  McAfee Ransomware Recover (Mr2)
  https://www.mcafee.com/enterprise/zh-tw/downloads/free-tools/ransomware-decryption.html
  
- ■ Worm
- ■ Trojan 
-■ Rootkit
-■ Keylogger
-■ Adware
-■ Spyware
-■ Bots
-■ RAT
-■ Logic bomb
-■ Backdoor
+ ■ Worm 勒索軟體
+ https://www.ithome.com.tw/tech/129616
+ https://zh.wikipedia.org/wiki/%E9%9B%BB%E8%85%A6%E8%A0%95%E8%9F%B2
+ https://www.websecurity.symantec.com/zh/tw/security-topics/difference-between-virus-worm-and-trojan-horse
+ ■ Trojan 木馬
+ https://blog.trendmicro.com.tw/?p=5795
+ https://en.wikipedia.org/wiki/Trojan_horse_(computing)
+ https://www.websecurity.symantec.com/zh/tw/security-topics/difference-between-virus-worm-and-trojan-horse
+■ Rootkit挖礦惡意程式
+https://zh.wikipedia.org/wiki/Rootkit
+https://blogs.technet.microsoft.com/twsecurity/2013/01/06/rootkit/
+https://blog.trendmicro.com.tw/?p=57986
+■ Keylogger 鍵盤按鍵記錄
+https://blog.techbridge.cc/2018/03/02/css-key-logger/
+https://ithelp.ithome.com.tw/articles/10197301
+https://www.malwarebytes.com/keylogger/
+https://ithelp.ithome.com.tw/articles/10197301
+■ Adware 廣告病毒
+https://www.malwarebytes.com/adware/
+https://en.wikipedia.org/wiki/Adware
+https://www.trendmicro.com/vinfo/us/security/definition/adware
+■ Spyware 間諜軟體
+https://en.wikipedia.org/wiki/Spyware
+https://blog.trendmicro.com.tw/?p=143
+https://sofree.cc/spyware-terminator/
+■ Bots 網路機器人
+https://en.wikipedia.org/wiki/Internet_bot
+https://core.telegram.org/bots
+https://www.vox.com/2016/4/11/11586022/what-are-bots
+■ RAT遠端存取木馬
+https://www.twblogs.net/a/5b8898692b71775d1cdd4d66tps://www.britannica.com/animal/rat
+https://baike.baidu.com/item/rat/20273970
+https://www.twblogs.net/a/5b8898692b71775d1cdd4d66
+■ Logic bomb 邏輯炸彈
+https://zh.wikipedia.org/wiki/%E9%82%8F%E8%BC%AF%E7%82%B8%E5%BD%88
+https://searchsecurity.techtarget.com.cn/whatis/11-25205/
+https://www.slideshare.net/ssuser4a1bc4/ss-35539841
+■ Backdoor 後門
+https://en.wikipedia.org/wiki/Backdoor_(computing)
+https://www.malwarebytes.com/backdoor/
+https://www.imperva.com/learn/application-security/backdoor-shell-attack/
 
 1.2 Compare and contrast types of attacks.
-■ Social engineering
-■ Phishing
-■ Spear phishing
-■ Whaling
-■ Vishing
-■ Tailgating
+■ Social engineering 社交工程
+https://blog.trendmicro.com.tw/?p=101
+https://en.wikipedia.org/wiki/Social_engineering_(security)
+https://www.webroot.com/ie/en/resources/tips-articles/what-is-social-engineering
+■ Phishing 釣魚
+https://blog.trendmicro.com.tw/?p=136
+https://en.wikipedia.org/wiki/Phishing
+https://www.imperva.com/learn/application-security/phishing-attack-scam/
+■ Spear phishing 魚叉式網路釣魚
+https://blog.trendmicro.com.tw/?p=15888
+https://digitalguardian.com/blog/what-is-spear-phishing-defining-and-differentiating-spear-phishing-and-phishing
+https://www.imperva.com/learn/application-security/spear-phishing/
+■ Whaling 網路捕鯨 
+https://blog.trendmicro.com.tw/?cat=3162
+https://zh.wikipedia.org/wiki/%E9%92%93%E9%B1%BC%E5%BC%8F%E6%94%BB%E5%87%BB
+https://www.ithome.com.tw/news/125863
+■ Vishing 網路釣魚
+https://blog.trendmicro.com.tw/?p=2091
+https://zh.wikipedia.org/wiki/%E9%92%93%E9%B1%BC%E5%BC%8F%E6%94%BB%E5%87%BB
+■ Tailgating 社會工程攻擊
+https://blog.trendmicro.com.tw/?p=51421
+https://baike.baidu.com/item/%E7%A4%BE%E4%BC%9A%E5%B7%A5%E7%A8%8B%E6%94%BB%E5%87%BB
 ■ Impersonation
 ■ Dumpster diving
 ■ Shoulder surfing
