--- a/安全技能.md
+++ b/安全技能.md
@@ -92,9 +92,15 @@ https://zh.wikipedia.org/wiki/%E9%92%93%E9%B1%BC%E5%BC%8F%E6%94%BB%E5%87%BB
 ■ Tailgating 社會工程攻擊
 https://blog.trendmicro.com.tw/?p=51421
 https://baike.baidu.com/item/%E7%A4%BE%E4%BC%9A%E5%B7%A5%E7%A8%8B%E6%94%BB%E5%87%BB
-■ Impersonation
-■ Dumpster diving
-■ Shoulder surfing
+■ Impersonation 假冒
+https://en.wikipedia.org/wiki/Impersonator
+https://www.vocabulary.com/dictionary/impersonation
+■ Dumpster diving 垃圾搜尋
+https://en.wikipedia.org/wiki/Dumpster_diving
+https://www.merriam-webster.com/dictionary/dumpster%20diving
+■ Shoulder surfing 觀察撿訊
+https://www.webopedia.com/TERM/S/shoulder_surfing.html
+https://www.lifelock.com/learn-identity-theft-resources-what-is-shoulder-surfing.html
 ■ Hoax
 ■ Watering hole attack
 ■ Principles (reasons for effectiveness)
