--- a/安全技能.md
+++ b/安全技能.md
@@ -101,10 +101,13 @@ https://www.merriam-webster.com/dictionary/dumpster%20diving
 ■ Shoulder surfing 觀察撿訊
 https://www.webopedia.com/TERM/S/shoulder_surfing.html
 https://www.lifelock.com/learn-identity-theft-resources-what-is-shoulder-surfing.html
-■ Hoax
-■ Watering hole attack
+■ Hoax 惡作劇病毒
+https://www.savetime.com.tw/new_virus/virus_02.asp
+https://www.kaspersky.com.cn/resource-center/threats/malicious-tools
+■ Watering hole attack 水坑
+https://blog.trendmicro.com.tw/?p=3328
 ■ Principles (reasons for effectiveness)
-■ Authority
+■ Authority 權威
 ■ Intimidation
 ■ Consensus
 ■ Scarcity
