--- a/安全技能.md
+++ b/安全技能.md
@@ -108,18 +108,28 @@ https://www.kaspersky.com.cn/resource-center/threats/malicious-tools
 https://blog.trendmicro.com.tw/?p=3328
 ■ Principles (reasons for effectiveness)
 ■ Authority 權威
-■ Intimidation
-■ Consensus
-■ Scarcity
-■ Familiarity
-■ Trust
-■ Urgency
-■ Application/service attacks
-■ DoS
-■ DDoS
-■ Man-in-the-middle
-■ Buffer overflow
-■ Injection
+■ Intimidation 恐嚇
+■ Consensus 共識
+■ Scarcity 缺乏
+■ Familiarity 熟識
+■ Trust 信任
+■ Urgency 緊急程度
+■ Application/service attacks DDoS攻擊
+https://blog.trendmicro.com.tw/?p=16497
+■ DoS 碟作業系統
+https://baike.baidu.com/item/DOS%E7%97%85%E6%AF%92
+■ DDoS 阻斷服務攻擊
+https://zh.wikipedia.org/wiki/%E9%98%BB%E6%96%B7%E6%9C%8D%E5%8B%99%E6%94%BB%E6%93%8A
+http://www.cc.ntu.edu.tw/chinese/epaper/0026/20130920_2606.html
+■ Man-in-the-middle 中間人攻擊
+https://zh.wikipedia.org/wiki/%E4%B8%AD%E9%97%B4%E4%BA%BA%E6%94%BB%E5%87%BB
+https://www.imperva.com/learn/application-security/man-in-the-middle-attack-mitm/
+https://blog.gtwang.org/funny/man-in-middle-attack/
+■ Buffer overflow 緩衝區溢位
+https://ithelp.ithome.com.tw/articles/10188599
+https://zh.wikipedia.org/wiki/%E7%BC%93%E5%86%B2%E5%8C%BA%E6%BA%A2%E5%87%BA
+■ Injection 資料隱碼攻擊
+https://www.qa-knowhow.com/?p=3186
 ■ Cross-site scripting
 ■ Cross-site request forgery
 ■ Privilege escalation
