--- a/資訊安全技術/雲端安全.md
+++ b/資訊安全技術/雲端安全.md
@@ -1,6 +1,7 @@
 # 雲端運算
 ```
 The NIST Definition of Cloud Computing
+Special Publication 800-145
 https://nvlpubs.nist.gov/nistpubs/Legacy/SP/nistspecialpublication800-145.pdf
 ```
 ###  
@@ -55,21 +56,40 @@ together by standardized or proprietary technology that enables data and applica
 portability (e.g., cloud bursting for load balancing between clouds). 
 ```
 ### Service Models
+
+[1]Software as a Service (SaaS)
 ```
-Software as a Service (SaaS). The capability provided to the consumer is to use the provider’s
+gmail  youtube  office365 
+```
+```
+. The capability provided to the consumer is to use the provider’s
 applications running on a cloud infrastructure. The applications are accessible from
 various client devices through either a thin client interface, such as a web browser (e.g.,
 web-based email), or a program interface. The consumer does not manage or control the
 underlying cloud infrastructure including network, servers, operating systems, storage, or
 even individual application capabilities, with the possible exception of limited userspecific application configuration settings.
-
-Platform as a Service (PaaS). The capability provided to the consumer is to deploy onto the cloud
+```
+[2]Platform as a Service (PaaS)
+```
+到 google cloud platform設定一個Kali LINUX來用
+                                 Windows server 2019
+```
+```
+. The capability provided to the consumer is to deploy onto the cloud
 infrastructure consumer-created or acquired applications created using programming languages, libraries, services, and tools supported by the provider.3 The consumer does
 not manage or control the underlying cloud infrastructure including network, servers,
 operating systems, or storage, but has control over the deployed applications and possibly
 configuration settings for the application-hosting environment.
+```
+[3]Infrastructure as a Service (IaaS)
+```
+到 google cloud platform設定一個8 核心 32GB Ram
 
-Infrastructure as a Service (IaaS). The capability provided to the consumer is to provision
+沒有安裝作業系統
+```
+
+```
+The capability provided to the consumer is to provision
 processing, storage, networks, and other fundamental computing resources where the
 consumer is able to deploy and run arbitrary software, which can include operating
 systems and applications. The consumer does not manage or control the underlying cloud
@@ -78,6 +98,7 @@ and possibly limited control of select networking components (e.g., host firewal
 ```
 # NIST Cloud Computing Reference Architecture 參考架構
 ```
+Special Publication 500-292
 https://bigdatawg.nist.gov/_uploadfiles/M0008_v1_7256814129.pdf
 ```
 ### Cloud Computing Reference Architecture: An Overview
@@ -121,3 +142,4 @@ Security Guidance v4.0
 CSA Security Guidance for Critical Areas of Focus in Cloud Computing v4.0
 https://cloudsecurityalliance.org/research/guidance/
 ```
+
