--- a/資訊安全技術/資料安全.md
+++ b/資訊安全技術/資料安全.md
@@ -1,34 +1,33 @@
 # 學習主題
 ```
-Data Loss Prevention (DLP)
+Data Loss Prevention (DLP)  (資料外洩防護)
 Data encryption[資料加密]
-■■ Full disk
-■■ Database
-■■ Individual files
-■■ Removable media
-■■ Mobile devices
+■■ Full disk (全機加密)
+■■ Database (資料庫)
+■■ Individual files ??????????
+■■ Removable media(可攜帶式電子產品)
+■■ Mobile devices (行動裝置)
 
 Hardware based encryption devices[加密硬體]
-■■ TPM
-■■ HSM
-■■ USB encryption
-■■ Hard drive
-Cloud computing
+■■ TPM(安全晶片)
+■■ HSM(硬體加密模組)
+■■ USB encryption(USB加密)
+■■ Hard drive(硬碟)
+Cloud computing(雲端計算)
 ```
-### Data Loss Prevention (DLP)
+### Data Loss Prevention (DLP) (資料外洩防護)
 ```
 Data loss prevention (DLP) is both a company policy and a product available on the technology
-market. As a company policy, DLP focuses on implementing defenses against data loss
-and theft. As a product, DLP is a technology solution that can assist with the fulfillment of a
-company’s DLP policy.
+market. As a company policy(政策), DLP focuses on implementing(實施) defenses(防禦) against data loss 
+and theft(損失和被盜). As a product, DLP is a technology(技術) solution(解決) that can assist(幫助) with the fulfillment(實現) of a company’s DLP policy.
 
-data loss vs data leak
+data loss(資料遺失) vs data leak(數據外洩)
 
 DLP系統:
 [1]open source: MyDLP (www.mydlp.com).
-[2]commercial DLP products 
+[2]commercial(商業) DLP products 
     Microsoft Forefront (www.microsoft.com/forefront) 
-    Symantec Data Loss Prevention (www.symantec.com/data-loss-prevention).
+    Symantec Data Loss Prevention(預防資料外洩) (www.symantec.com/data-loss-prevention).?????????
      其他
      
 ```
@@ -41,21 +40,23 @@ DLP系統:
 file containing customer credit card numbers from unauthorized access. 
 
 What information security goal are you pursuing? 
-A. Confidentiality 
+A. Confidentiality (保密)
 B. Integrity 
-C. Disclosure
-D. Availability 
+C. Disclosure(洩漏)
+D. Availability (可用信)
 
+答案是: A
 
-2. You are performing a risk assessment of an organization and 
-decide that the likelihood of a particular risk materializing is “low.” 
+2. You are performing a (risk assessment(風險評估)) of an organization(組織) and 
+decide that the likelihood(可能性) of a (particular risk(特定風險)) materializing is “low.” 
 
 What type of risk assessment are you performing? 
 A.  Operational
-B.  Quantitative 
-C.  Technical 
+B.  Quantitative (定量)
+C.  Technical (技術)
 D.  Qualitative 
 
+答案是: B
 
 3. You are conducting a quantitative risk assessment for an organization to
 identify the risk of a fire in a data center. 
